[gd_scene load_steps=2 format=3 uid="uid://dexglav57dfx"]

[ext_resource type="Script" path="res://GUI/HUD.gd" id="1_71f68"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
script = ExtResource("1_71f68")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2

[node name="HealthLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "Health:"
vertical_alignment = 1

[node name="CurrentHealth" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "0"
vertical_alignment = 1
text_direction = 1

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DamagePlayerButton" type="Button" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
text = "Damage Player : 2"

[node name="RespawnPlayerButton" type="Button" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
text = "Respawn Player"

[connection signal="pressed" from="TopBar/DamagePlayerButton" to="." method="_on_damage_player_button_pressed"]
[connection signal="pressed" from="TopBar/RespawnPlayerButton" to="." method="_on_respawn_player_button_pressed"]
